# ghostcom

./: .gitignore  ATTEMPTS.md  ISSUES.md  README.md  TODO.md  package.json  tsconfig.json
.cargo/: config.toml
addon/: Cargo.toml
addon/src/: control.rs  error.rs  ioctl.rs  lib.rs  overlapped.rs  port.rs  signals.rs  stream.rs
driver/: ghostcom-port.inf  ghostcom.inf  ghostcom.vcxproj  node-null.inf  node-null.vcxproj
driver/src/: companion.c  comport.c  control.c  driver.c  driver.h  ghostcom.rc  ioctls.h  (+2 more)
examples/: echo.ts  loopback.ts  pair.ts  signal-monitor.ts
scripts/: allure-server.mjs  build-driver.ps1  check-zombies.ts  create-root-device.ps1  deploy-to-vm.ps1  enable-kernel-debug.ps1  generate-allure-report.ts  install-driver.ps1  junit-to-allure.ts  publish-allure-history.ts  run-tests.ts  setup-test-vm.ps1  start-allure-hidden.vbs  start-allure-server.bat  uninstall-driver.ps1
src/: control.ts  index.ts  port.ts  signals.ts  stream.ts  types.ts
tests/: checkregistry.js  cleanup.js  com-reader.js  compat.test.ts  diag.js  diag10-worker-apc.js  diag11-worker.js  diag12-worker-simple.js  diag13-sleepex.js  diag2.js  diag3.js  diag4.js  diag5.js  diag6.js  diag7.js  diag8.js  diag9-readfileex.js  e2e.test.ts  enumeration.test.ts  list.js  port-selection.test.ts  ps-read-test.ps1  read-com-simple.ps1  read-com-sync.ps1  read-com.ps1  ring-full-probe.js  robustness.test.ts  serialport-pkg.bun.test.ts  serialport-pkg.node.test.mjs  test-readfileex.py  testport.js  worker-com-reader.js  worker-simple.js  worker-sleepex-test.js  worker-sync-reader.js
