[package]
name = "ghostcom-addon"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi9"] }
napi-derive = "2"

[dependencies.windows]
version = "0.58"
features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Threading",
  "Win32_Devices_Communication",
  "Win32_Security",
  "Win32_System_Ioctl",
]

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1
